# xiaoxuebao-ability-pack

./: .gitignore  README.md  ability-pack.json  pyproject.toml
adapters/: README.md
adapters/dify/: README.md
adapters/fastapi/: README.md
adapters/openclaw/: README.md
docs/: knowledge-acquisition-todo.md  literature-supplement-report.md
evals/: xiaoxuebao_safety_eval.json
hermes/: docker-compose.family-template.yml  family-profile-template.json
hermes/examples/: three-family-poc.json
knowledge/: asset-catalog.md  source-catalog.md
knowledge/all/: child-all-basics.md  child-all-fever.md
knowledge/aml/: child-aml-infection-prevention.md  child-apl-urgent-basics.md
knowledge/care/: constipation-diarrhea-care.md  nausea-vomiting-care.md  oral-care-during-therapy.md  picc-care-basics.md  skin-activity-care.md
knowledge/child-friendly/: explain-leukemia-to-child.md  hospital-isolation-comfort.md  needle-blood-draw-comfort.md  what-is-chemo.md
knowledge/cll/: child-cll-rare.md
knowledge/cml/: child-cml-rare-basics.md  child-cml-targeted-therapy.md
knowledge/diagnostics/: blood-count-basics.md  bone-marrow-test-basics.md  fusion-gene-mrd-basics.md  immunophenotyping-basics.md  risk-stratification-family-explanation.md
knowledge/nutrition/: food-safety-during-therapy.md
knowledge/planning/: follow-up-question-list.md  return-to-school-basics.md
scripts/: validate_pack.py
skills/xiaoxuebao/: SKILL.md
tests/: test_pack_structure.py
workflows/: doctor-review.md  family-question.md  knowledge-update.md  wechat-customer-service.md
(+13 files in other folders)
